feat: 添加测试框架和测试用例
refactor: 重构代码以支持测试

test: 添加单元测试和集成测试

ci: 添加测试运行脚本和配置

docs: 更新文档说明测试指南

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ node_modules
 # local npm cache (optional)
 .npm-cache
 
+# test build output
+dist-test
+
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
 main.js
